--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -25,7 +25,7 @@
                 
                 <p></p>
                 <label>Feature</label>
-                <select name="category_id" class="select2">
+                <select name="feature_id" class="select2">
                   <option value="">All</option>
                   <% Feature.all.order(:name).each do |f| %>
                     <option value="<%= f.id %>"><%= f.name %></option>
