update scrapp title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
                     "data": function ( d ) {
                         d.page_id = $("select[name='page_id']").val(),
                         d.category_id = $("select[name='category_id']").val(),
-                        d.category_id = $("select[name='feature_id']").val()
+                        d.feature_id = $("select[name='feature_id']").val()
                     }
                 },
             } );
