--- a/app/views/features/show.html.erb
+++ b/app/views/features/show.html.erb
@@ -20,5 +20,10 @@
   <%= @feature.tag_item_link %>
 </p>
 
+<p>
+  <strong>Innerpage image regex:</strong>
+  <%= @feature.innerpage_image_regex %>
+</p>
+
 <%= link_to 'Edit', edit_feature_path(@feature) %> |
 <%= link_to 'Back', features_path %>
