--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -42,6 +42,7 @@
                 <th>Page</th>
                 <th>Category</th>
                 <th>Link</th>
+                <th>Actions</th>
               </tr>
             </thead>
           
