scrap item images

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -37,11 +37,13 @@
           
           <table class="table datatable-items">
             <thead>
-              <tr>
+              <tr>                
                 <th>Name</th>
                 <th>Page</th>
                 <th>Category</th>
+                <th class="text-center">Picture</th>
                 <th>Link</th>
+                
                 <th>Actions</th>
               </tr>
             </thead>
